--- a/index.html
+++ b/index.html
@@ -14,11 +14,24 @@
   </header>
   <main>
     <h2>📌 最新活動成果</h2>
-    <section>
-      <h3><a href="projects/bailing406.html">百齡國小 406 班｜早餐的約會</a></h3>
-      <p>孩子們親手準備人生中第一次早餐，獻給最愛的家人。這場特別的「早餐約會」，滿載溫馨、感謝與成長的回憶。</p>
-      <p><strong>日期：</strong>2025 年 5 月 5 日</p>
-    </section>
-  </main>
-</body>
-</html>
+
+<h3><a href="projects/bailing406.html">百齡國小 406 班｜早餐的約會</a></h3>
+<p>孩子們親手準備人生中第一次早餐，獻給最愛的家人。這場特別的「早餐約會」，滿載溫馨、感謝與成長的回憶。</p>
+<p><strong>日期：</strong>2025-05-05</p>
+
+<h3><a href="projects/bailing306.html">百齡國小 306 班｜用笑容說謝謝</a></h3>
+<p>一場由孩子親手策劃的活動，送給一直默默支持他們的家長與老師。笑聲與擁抱，是這天最美的主題。</p>
+<p><strong>日期：</strong>2025-04-28</p>
+
+<h3><a href="projects/zhongshan202405.html">中山國中 畢業生特輯｜我們的最後一課</a></h3>
+<p>三年青春濃縮在最後的致詞與擁抱中。這是一堂關於感謝、離別與夢想的課。</p>
+<p><strong>日期：</strong>2025-05-01</p>
+
+<h3><a href="projects/chenggongkids.html">成功國小六年級｜成長謝師宴</a></h3>
+<p>孩子們親自設計表演與感謝卡片，讓老師感受到滿滿的愛與祝福。</p>
+<p><strong>日期：</strong>2025-04-22</p>
+
+<h3><a href="projects/tamsuiartday.html">淡水國小藝術日｜一起畫未來</a></h3>
+<p>淡水國小的孩子與藝術家一同完成了校園彩繪牆，留下色彩繽紛的共同回憶。</p>
+<p><strong>日期：</strong>2025-04-30</p>
+</main></body></html>
