--- a/projects/zhongshan202405.html
+++ b/projects/zhongshan202405.html
@@ -3,18 +3,18 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
-  <title>百齡國小 406 班｜早餐的約會</title>
+  <title>中山國中 畢業生特輯｜我們的最後一課</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
   <header>
     <a href="../index.html">← 返回首頁</a>
-    <h1>百齡國小 406 班｜早餐的約會</h1>
+    <h1>中山國中 畢業生特輯｜我們的最後一課</h1>
   </header>
   <main>
-    <p><strong>活動日期：</strong>2025-05-05</p>
-    <p>孩子們親手準備人生中第一次早餐，獻給最愛的家人。這場特別的「早餐約會」，滿載溫馨、感謝與成長的回憶。</p>
+    <p><strong>活動日期：</strong>2025-05-01</p>
+    <p>三年青春濃縮在最後的致詞與擁抱中。這是一堂關於感謝、離別與夢想的課。</p>
     <h2>📸 活動相簿</h2>
     <p><a href="https://photos.app.goo.gl/BjNi44oBq4mVtp6f7" target="_blank">👉 點我看完整相簿</a></p>
     <h2>🎬 活動影片</h2>
