--- a/index.html
+++ b/index.html
@@ -15,8 +15,18 @@
   <main>
     <h2>📌 最新活動成果</h2>
 
-<h3><a href="projects/bailing406.html">百齡國小 406 班｜早餐的約會</a></h3>
-<p>孩子們親手準備人生中第一次早餐，獻給最愛的家人。這場特別的「早餐約會」，滿載溫馨、感謝與成長的回憶。</p>
+
+<section class="activity-card">
+  <a href="projects/bailing406.html">
+    <img src="assets/images/bailing406/縮圖.jpg" alt="百齡國小 406 班縮圖" class="thumb">
+    <div>
+      <h3>百齡國小 406 班｜早餐的約會</h3>
+      <p>孩子們親手準備人生中第一次早餐，獻給最愛的家人。這場特別的「早餐約會」，滿載溫馨、感謝與成長的回憶。</p>
+      <p><strong>日期：</strong>2025 年 5 月 5 日</p>
+    </div>
+  </a>
+</section>
+
 <p><strong>日期：</strong>2025-05-05</p>
 
 <h3><a href="projects/bailing306.html">百齡國小 306 班｜用笑容說謝謝</a></h3>
