--- a/projects/bailing406.html
+++ b/projects/bailing406.html
@@ -13,10 +13,21 @@
     <h1>百齡國小 406 班｜早餐的約會</h1>
   </header>
   <main>
-    <p><strong>活動日期：</strong>2025-05-05</p>
+    <p><strong>活動日期：</strong>2025 年 5 月 5 日</p>
     <p>孩子們親手準備人生中第一次早餐，獻給最愛的家人。這場特別的「早餐約會」，滿載溫馨、感謝與成長的回憶。</p>
-    <h2>📸 活動相簿</h2>
+
+    <h2>📸 活動精選照片</h2>
+    <div class="gallery">
+      <img src="../assets/images/bailing406/DSC00750.jpg" alt="DSC00750.jpg" class="gallery-img">
+      <img src="../assets/images/bailing406/DSC00685.jpg" alt="DSC00685.jpg" class="gallery-img">
+      <img src="../assets/images/bailing406/DSC01031.jpg" alt="DSC01031.jpg" class="gallery-img">
+      <img src="../assets/images/bailing406/DSC00856.jpg" alt="DSC00856.jpg" class="gallery-img">
+
+    </div>
+
+    <h2>📸 完整相簿</h2>
     <p><a href="https://photos.app.goo.gl/BjNi44oBq4mVtp6f7" target="_blank">👉 點我看完整相簿</a></p>
+
     <h2>🎬 活動影片</h2>
     <iframe width="100%" height="400" src="https://www.youtube.com/embed/ZI-KdpTdH-s" frameborder="0" allowfullscreen></iframe>
   </main>
